--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,11 +24,20 @@ moshi = "1.15.2"
 hilt = "2.57.1"
 hiltx = "1.3.0"
 # UI
-glide = "5.0.5"
+glide = "1.0.0-beta08"
 shimmer = "1.3.3"
 splashscreen = "1.0.1"
+foundationLayout = "1.9.1"
 # DB
 sqlcipher = "4.5.4"
+# Testing
+junit = "4.13.2"
+androidxTest = "1.7.0"
+androidxTestJunit = "1.3.0"
+kotlinxCoroutines = "1.10.2"
+robolectric = "4.16"
+mockk = "1.14.5"
+turbine = "1.2.1"
 
 # Project Details
 minSdk = "29"
@@ -37,7 +46,6 @@ targetSdk = "36"
 versionCode = "1"
 versionName = "1.0"
 namespace = "dev.byto.hcsgus"
-foundationLayout = "1.9.1"
 
 
 [libraries]
@@ -51,11 +59,13 @@ androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", versi
 androidx-compose-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-compose-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
+androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-compose-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
+androidx-navigation-testing = { group = "androidx.navigation", name = "navigation-testing", version.ref = "navigationCompose" }
 
 # Paging 3
 androidx-paging-runtime = { group = "androidx.paging", name = "paging-runtime", version.ref = "paging" }
@@ -63,6 +73,8 @@ androidx-paging-compose = { group = "androidx.paging", name = "paging-compose", 
 
 # Dependency Injection - Hilt
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
+hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testing", version.ref = "hilt" }
+hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
 hilt-work = { group = "androidx.hilt", name = "hilt-work", version.ref = "hiltx" }
 hilt-work-compiler = { group = "androidx.hilt", name = "hilt-compiler", version.ref = "hiltx" }
@@ -73,6 +85,7 @@ retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = 
 retrofit-converter-moshi = { group = "com.squareup.retrofit2", name = "converter-moshi", version.ref = "retrofit" }
 okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
 okhttp-logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
+okhttp-mockwebserver = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "okhttp" }
 
 # JSON Parsing - Moshi
 moshi-kotlin = { group = "com.squareup.moshi", name = "moshi-kotlin", version.ref = "moshi" }
@@ -93,11 +106,21 @@ sqlcipher = { group = "net.zetetic", name = "android-database-sqlcipher", versio
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
 
 # UI
-glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
-glide-compose = { group = "com.github.bumptech.glide", name = "compose", version = "1.0.0-beta08" }
+glide-compose = { group = "com.github.bumptech.glide", name = "compose", version.ref = "glide" }
 androidx-compose-foundation-layout = { group = "androidx.compose.foundation", name = "foundation-layout", version.ref = "foundationLayout" }
 shimmer = { group = "com.valentinilk.shimmer", name = "compose-shimmer", version.ref = "shimmer"}
 splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "splashscreen"}
+
+# Testing
+junit = { group = "junit", name = "junit", version.ref = "junit" }
+androidx-test-core-ktx = { group = "androidx.test", name = "core-ktx", version.ref = "androidxTest" }
+androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidxTestJunit" }
+androidx-work-testing = { group = "androidx.work", name = "work-testing", version.ref = "workManager" }
+kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinxCoroutines" }
+robolectric = { group = "org.robolectric", name = "robolectric", version.ref = "robolectric" }
+mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
+turbine = { group = "app.cash.turbine", name = "turbine", version.ref = "turbine" }
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
